pkg/i2gw/providers/istio/fixtures/input/2-virtualservice-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: test
  name: reviews-route
spec:
  gateways:
  - "my-gateway"
  hosts:
  - reviews.prod.svc.cluster.local
  - reviews.test.svc.cluster.local
  http:
  - name: "v2"
    match:
    - uri:
        prefix: "/wpcatalog"
      headers:
        h1:
          exact: v1
      queryParams:
        q1:
          exact: v2
      method:
        exact: GET
    - uri:
        exact: "/consumercatalog"
      headers:
        h2:
          regex: v3
      queryParams:
        q2:
          regex: v4
    - uri:
        regex: "/catalog[0-9]+"
      # all fields for match below are ignored
      scheme:
        exact: "value"
      authority:
        exact: "value"
      port: 8080
      sourceLabels:
        k: v
      ignoreUriCase: true
      withoutHeaders:
        header1:
          exact: value
      sourceNamespace: test
      statPrefix: stats
      gateways: ["gw1"]
    redirect:
      uri: /v1/bookRatings
      redirectCode: 302
      scheme: http
      port: 8080
      # authority & derivePort are ignored
      authority: newratings.default.svc.cluster.local
    rewrite:
      uri: "/newcatalog"
      # authority & uriRegexRewrite are ignored
      authority: test
      uriRegexRewrite:
        match: pattern
        rewrite: new-pattern
    mirror:
      host: reviews # interpreted as reviews.test.svc.cluster.local
      subset: v1
    mirrors:
    - destination:
        host: reviewsA # interpreted as reviews.test.svc.cluster.local
      percentage:
        value: 50
    - destination:
        host: reviewsB.prod.svc.cluster.local # interpreted as reviews.test.svc.cluster.local
      percentage:
        value: 50
    route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v2
    timeout: 5s
    headers:
      request:
        add:
          h1: v1
        set:
          h2: v2
        remove:
        - h3
      response:
        add:
          h4: v4
        set:
          h5: v5
        remove:
        - h6
    # the remaning fields are ignored
    directResponse:
      status: 503
    delegate:
      name: reviews
    retries:
      attempts: 3
    fault:
      abort:
        percentage:
          value: 0.1
        httpStatus: 400
    corsPolicy:
    allowOrigins:
      - exact: https://example.com
