pkg/i2gw/providers/istio/fixtures/input/3-virtualservice-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: test
  name: reviews-route
spec:
  gateways:
  - "my-gateway"
  hosts:
  - reviews.prod.svc.cluster.local
  - reviews.test.svc.cluster.local
  tls:
  - match:
    - port: 443
      sniHosts:
      - login.bookinfo.com
    route:
    - destination:
        host: login.prod.svc.cluster.local
  - match:
    - port: 443
      sniHosts:
      - reviews.bookinfo.com
    route:
    - destination:
        host: reviews
