pkg/i2gw/providers/istio/fixtures/input/7-virtualservice-http-cors.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: bookinfo
  name: cors
spec:
  gateways:
    - bookinfo-gateway
  hosts:
    - bookinfo.example.com
  http:
    - name: all-fields
      corsPolicy:
        allowOrigins:
          - exact: https://bookinfo.example.com
          # prefix is ignored.
          - prefix: /dashboard
          # regex will match when it matches GW API validation
          - regex: https://*.sub.example.com:8080
          # regex won't match when it contains regexp metacharacters
          - regex: https://.*\.example\.com
        allowMethods:
          - GET
          - POST
        allowHeaders:
          - x-custom-header
          - authorization
        exposeHeaders:
          - x-request-id
        maxAge: 24h
        allowCredentials: true
      match:
        - uri:
            prefix: /productpage
      route:
        - destination:
            host: productpage.bookinfo.svc.cluster.local
            port:
              number: 9080
    - name: minimal
      corsPolicy:
        allowOrigins:
          - exact: https://example.com
      match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api.bookinfo.svc.cluster.local
            port:
              number: 8080
